Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-117499

Mouse scroll events stop working with `-platform windows:reverse`

XMLWordPrintable

    • Windows
    • 78512135c (dev), 6ac543c84 (6.6), 9963e37bb (tqtc/lts-6.5)

      The option `-platform windows:reverse` was introduced to support RTL window title bars (see https://codereview.qt-project.org/c/qt/qtbase/+/42521 ). However, using it causes the Qt GUI to stop responding to the mouse scroll wheel.

       

      Code

      import QtQuick 2.15
      import QtQuick.Controls 2.15
      
      ApplicationWindow {
          width: 400
          height: 200
          visible: true
          title: "مرحبا بالعالم"
      
          LayoutMirroring.enabled: true
          LayoutMirroring.childrenInherit: true
      
          ComboBox {
              width: parent.width
              model: ["مرحبًا","عالم","مرحبا بالعالم", "aaa", "bbb", "ccc", "ddd", "eee", "fff", "ggg"]
          }
      }
      

       

      Steps to reproduce

      1. Add qApp->setLayoutDirection(Qt::LayoutDirection::RightToLeft); to main() and then run the QML code above
      2. Click on the combobox and use the mouse wheel to scroll the drop-down menu
      3. Close and relaunch the app with the console arguments -platform windows:reverse and repeat the test

       

      Outcomes

      • Without -platform windows:reverse the scroll wheel works
      • With -platform windows:reverse the scroll wheel does not work

        1. qtbug117499.qml
          0.4 kB
        2. qtbug117499.zip
          2 kB
        For Gerrit Dashboard: QTBUG-117499
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            skoh-qt Sze Howe Koh
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes